--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>com.sip</groupId>
 	<artifactId>ams</artifactId>
-	<version>v1-dev</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>ams</name>
-	<description>Spring Boot project - Article Management System</description>
+	<description>Spring Boot Project - Article Managment Systme</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -44,10 +44,6 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 	</dependencies>
 
